用户端-门户（首页服务）代码完成